--- a/part1/casuals.html
+++ b/part1/casuals.html
@@ -40,7 +40,7 @@
                 <h5 class="card-title">Classic Black Suit</h5>
                 <p class="card-text">Elegant black suit, perfect for formal occasions. <br>
                 <br></p>
-                <a href="#" class="btn btn-primary">Buy Now</a>
+                <a href="casualcard1.html" class="btn btn-primary">Buy Now</a>
               </div>
             </div>
           </div>
@@ -54,19 +54,19 @@
                 <br>
             <br>
         </p>
-                <a href="#" class="btn btn-primary">Buy Now</a>
+                <a href="casualcard2.html" class="btn btn-primary">Buy Now</a>
               </div>
             </div>
           </div>
           <!-- Card 3 -->
           <div class="col-md-4">
             <div class="card">
-              <img src="téléchargement (1).jpeg"card-img-top" alt="Suit 3">
+              <img src="téléchargement (1).jpeg" class=" card-img-top" alt="Suit 3">
               <div class="card-body">
                 <h5 class="card-title">Charcoal Grey Suit</h5>
                 <p class="card-text">Sophisticated grey suit for business or weddings. <br>
                 <br></p>
-                <a href="#" class="btn btn-primary">Buy Now</a>
+                <a href="casualcard3.html" class="btn btn-primary">Buy Now</a>
               </div>
             </div>
           </div>
@@ -83,7 +83,7 @@
             <h5 class="card-title">Classic Black Suit</h5>
             <p class="card-text">Elegant black suit, perfect for formal occasions. <br>
             <br> <br></p>
-            <a href="#" class="btn btn-primary">Buy Now</a>
+            <a href="casualcard4.html" class="btn btn-primary">Buy Now</a>
           </div>
         </div>
       </div>
@@ -97,7 +97,7 @@
             <br>
         <br>
     </p>
-            <a href="#" class="btn btn-primary">Buy Now</a>
+            <a href="casualcard5.html" class="btn btn-primary">Buy Now</a>
           </div>
         </div>
       </div>
@@ -109,7 +109,7 @@
             <h5 class="card-title">Charcoal Grey Suit</h5>
             <p class="card-text">Sophisticated grey suit for business or weddings. <br>
             <br></p>
-            <a href="#" class="btn btn-primary">Buy Now</a>
+            <a href="casualcard6.html" class="btn btn-primary">Buy Now</a>
           </div>
         </div>
       </div>
