--- a/part1/classic.html
+++ b/part1/classic.html
@@ -38,7 +38,7 @@
             <div class="card-body">
               <h5 class="card-title">Classic White Suit</h5>
               <p class="card-text">A timeless white suit for the perfect wedding day.</p>
-              <a href="#" class="btn btn-primary">View Details</a>
+              <a href="cardclassic1.html" class="btn btn-primary">Buy Now</a>
             </div>
           </div>
         </div>
@@ -49,7 +49,7 @@
             <div class="card-body">
               <h5 class="card-title">Royal Blue Tuxedo</h5>
               <p class="card-text">Elegant royal blue tuxedo with a satin finish.</p>
-              <a href="#" class="btn btn-primary">View Details</a>
+              <a href="cardclassic2.html" class="btn btn-primary">Buy Now</a>
             </div>
           </div>
         </div>
@@ -60,7 +60,7 @@
             <div class="card-body">
               <h5 class="card-title">Charcoal Grey Suit</h5>
               <p class="card-text">Modern grey suit tailored for a sleek look.</p>
-              <a href="#" class="btn btn-primary">View Details</a>
+              <a href="cardclassic3.html" class="btn btn-primary">Buy Now</a>
             </div>
           </div>
         </div>
@@ -71,7 +71,7 @@
             <div class="card-body">
               <h5 class="card-title">Classic Black Tuxedo</h5>
               <p class="card-text">Sophisticated black tuxedo with a satin lapel.</p>
-              <a href="#" class="btn btn-primary">View Details</a>
+              <a href="#" class="btn btn-primary">Buy Now</a>
             </div>
           </div>
         </div>
@@ -82,7 +82,7 @@
             <div class="card-body">
               <h5 class="card-title">Ivory Wedding Suit</h5>
               <p class="card-text">Soft ivory suit with a luxurious touch.</p>
-              <a href="#" class="btn btn-primary">View Details</a>
+              <a href="cardclassic4.html" class="btn btn-primary">Buy Now</a>
             </div>
           </div>
         </div>
@@ -93,7 +93,7 @@
             <div class="card-body">
               <h5 class="card-title">Navy Velvet Suit</h5>
               <p class="card-text">Stylish navy velvet suit for a unique wedding look.</p>
-              <a href="#" class="btn btn-primary">View Details</a>
+              <a href="cardclassic6.html" class="btn btn-primary">Buy Now</a>
             </div>
           </div>
         </div>
