--- a/part1/wedding.html
+++ b/part1/wedding.html
@@ -40,7 +40,7 @@
                 </h5>
                 <p class="card-text">"A sophisticated black pinstripe suit, perfect for a professional yet elegant wedding style."                    <br>
                 </p>
-                <a href="#" class="btn btn-primary">View Details</a>
+                <a href="card1.html" class="btn btn-primary">Buy Now</a>
               </div>
             </div>
           </div>
@@ -54,7 +54,7 @@
                 <p class="card-text">"A sleek and vibrant royal blue tuxedo, tailored for a sharp and stylish groom."
 
                 </p>
-                <a href="#" class="btn btn-primary">View Details</a>
+                <a href="card2.html" class="btn btn-primary">Buy Now</a>
               </div>
             </div>
           </div>
@@ -68,7 +68,7 @@
                 <p class="card-text">"A versatile charcoal grey suit with a refined checkered pattern, suitable for any special occasion."
 
                 </p>
-                <a href="#" class="btn btn-primary">View Details</a>
+                <a href="card3.html" class="btn btn-primary">Buy Now</a>
               </div>
             </div>
           </div>
@@ -83,7 +83,7 @@
 
                     <br> <br>
                 </p>
-                <a href="#" class="btn btn-primary">View Details</a>
+                <a href="card4.html" class="btn btn-primary">Buy Now</a>
               </div>
             </div>
           </div>
@@ -98,7 +98,7 @@
 
                     <br>
                      <br></p>
-                <a href="#" class="btn btn-primary">View Details</a>
+                <a href="card5.html" class="btn btn-primary">Buy Now</a>
               </div>
             </div>
           </div>
@@ -110,7 +110,7 @@
                 <h5 class="card-title">Sophisticated Light Grey Suit
                 </h5>
                 <p class="card-text">"A stylish light grey suit with subtle patterns, ideal for a bright and cheerful wedding day."</p>
-                <a href="#" class="btn btn-primary">View Details</a>
+                <a href="card6.html" class="btn btn-primary">Buy Now</a>
               </div>
             </div>
           </div>
